2nd commit so ulgy

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="http://imagesloaded.desandro.com/imagesloaded.pkgd.min.js"></script>
 	 <script src="http://masonry.desandro.com/masonry.pkgd.min.js"></script>
+	 <script type="https://rawgithub.com/desandro/classie/master/classie.js"></script>
 	<!-- Optional theme -->
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 
