--- a/views/post.ejs
+++ b/views/post.ejs
@@ -21,12 +21,30 @@
 	var msnry;
 // initialize Masonry after all images have loaded
 imagesLoaded( container, function() {
-	console.log("images loaded")
+	console.log("images loaded");
   msnry = new Masonry( container, {
   	 columnWidth: 300,
 	  itemSelector: '.item'
   });
 });
+
+var container = document.querySelector('masonary');
+  var msnry = new Masonry( container, {
+    columnWidth: 60
+  });
+
+//   eventie.bind( container, 'click', function( event ) {
+//     // don't proceed if item was not clicked on
+//     if ( !classie.has( event.target, 'item' ) ) {
+//       return;
+//     }
+//     // change size of item via class
+//     classie.toggle( event.target, 'gigante' );
+//     // trigger layout
+//     msnry.layout();
+//   });
+
+// });
 
 container.onclick = function(event) {
 	console.log(event.target.parentElement);
@@ -36,7 +54,7 @@ container.onclick = function(event) {
 		msnry.layout();
 	}
 
-}
+};
 
 
 
