a message for heroku

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,8 @@
 	<!-- <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"> -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="http://imagesloaded.desandro.com/imagesloaded.pkgd.min.js"></script>
-	 <script src="http://masonry.desandro.com/masonry.pkgd.min.js"></script>
-	 <script type="https://rawgithub.com/desandro/classie/master/classie.js"></script>
+	<script src="http://masonry.desandro.com/masonry.pkgd.min.js"></script>
+	<script type="text/javascript" src ="/javascript/classie.js"></script>
 	<!-- Optional theme -->
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 
