--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,9 @@ body {
   padding-top: 20px;
   background-color: darkgrey;
 }
-
+div.masonry {
+  background-color: #FF5333;
+}
 .footer {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -95,3 +97,52 @@ body {
 
 #masonary .item{ width:20%; margin: 20px;}
 .item.w2 { width: 50%; }
+
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body { font-family: sans-serif; }
+
+.masonry {
+  background: #EEE;
+  max-width: 640px;
+}
+
+/* clearfix */
+.masonry:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.masonry .item {
+  width:  60px;
+  height: 60px;
+  float: left;
+  background: #D26;
+  border: 2px solid #333;
+  border-color: hsla(0, 0%, 0%, 0.5);
+  border-radius: 5px;
+}
+
+.item.w2 { width:  120px; }
+.item.w3 { width:  180px; }
+.item.w4 { width:  240px; }
+
+.item.h2 { height: 100px; }
+.item.h3 { height: 130px; }
+.item.h4 { height: 180px; }
+
+.item.gigante {
+  width: 280px;
+  height: 280px;
+}
+
+.item:hover {
+  background: #A2C;
+  border-color: white;
+  cursor: pointer;
+}
