a message for heroku

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ body {
   background-color: darkgrey;
 }
 div.masonry {
-  background-color: #FF5333;
+  background-color: darkgrey;
 }
 .footer {
   padding-top: 40px;
