a message for heroku

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body {
   padding-top: 20px;
-  background-color: rgba(84,84,84,1);
+  background-color: #FF9955;
 }
 div.masonry {
   background-color: rgba(84,84,84,0);
