--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,7 +3,7 @@
 
 <div id="container">
   <div class="item w3">
-<h2>Oops! Look's like you went to a page that does not exist. Head <a href="/">back home</a> and try again.</h2>
+<h2>Welcome stranger, to the end of the world. Head <a href="/">back home</a> and try again.</h2>
   </div>
 </div>
 
