--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% include partials/header.ejs %>    
 
 	<h1> Story time is around the corner...</h1>
-
+	<h2> To use this app, Sign up or Login. Write a story and name it with a good keyword. As you read you will have some images generated as illustrations</h2>
 	<% if (typeof message !== 'undefined') { %>
 		<p><%= message %></p>
 	<% } %>
