--- a/views/list.ejs
+++ b/views/list.ejs
@@ -2,6 +2,7 @@
 
 
 
-<h1>This is where the list of posts needs to go</h1>
+<h1> You see a list of all posts by author. Wear a hat, there is work being done.
+</h1>
 
 <% include partials/footer.ejs%>
