--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
         <ul class="nav nav-justified">
           <li><a href="/">Home</a></li>
           <li><a href="/list">All Stories</a></li>
-          <li><a href="/home">Post</a></li>
+          <li><a href="/home">Create a story!</a></li>
           <li><a href="/login">Login</a></li>
           <li><a href="/signup">Signup</a></li>
         </ul>
